Ajuste de layout e adição de nova página para alteração de senha.